<resources>
    <string name="app_name">联合矿业</string>
    <string name="app_title">联合矿业</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="myCoin">我的余额</string>
    <string name="getValue">收益余额</string>
    <string name="language">中文</string>
    <string name="buymeachine">购买矿机</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="checkPassword">找回密码</string>
    <string name="changePassword">更改密码</string>
    <string name="gonggao">公告</string>
    <string name="wo_de_kuang_ji">我的矿机</string>
    <string name="cha_kan_xiang_qing">查看详情</string>
    <string name="jin_ri_chan_chu">今日产出</string>
    <string name="lei_ji_chanchu">累计产出</string>
    <string name="zhi_jie_yao_qing">直接邀请</string>
    <string name="lei_ji_yao_qing">累计邀请</string>
    <string name="lei_ji_shou_yi">累计收益</string>
    <string name="jin_ri_shou_mai">今日全网售卖</string>
    <string name="jin_ri_fen_hong">今日矿友圈分红</string>
    <string name="shou_ye">首页</string>
    <string name="kuang_you_quan">矿友圈</string>
    <string name="qian_bao">钱包</string>
    <string name="gou_mai_kuangji">购买矿机</string>
    <string name="deng_lu_zhang_hao">登录账号</string>
    <string name="enter_phone">请输入手机号</string>
    <string name="enter_password">请输入密码</string>
    <string name="ji_zhu_mima">忘记密码</string>
    <string name="li_ji_zhuce">立即注册</string>
    <string name="suanli_tixian">算力提现</string>
    <string name="abc_n_itiger">提现将按当前ABC币价至\niTiger交易所</string>
    <string name="tixian_zhi_jiaoyisuo">提现至iTiger交易所账号</string>
    <string name="input_itiger">请输入iTiger交易所账号</string>
    <string name="queren_zhanghu">确认iTiger交易所账号</string>
    <string name="chongxin_shuru_zhanghu">请重新输入iTiger交易所账号</string>
    <string name="tixian_suanli">提现算力</string>
    <string name="qing_shuru_tixian_suanli">请输入提现算力</string>
    <string name="yuji_daozhang">预计到账</string>
    <string name="shuru_tixian_suanli">请输入提现算力</string>
    <string name="dangqian_bijia">当前币价为：%s USDT</string>
    <string name="dengli_mima">登录密码</string>
    <string name="shuru_denglu_mima">请输入登录密码</string>
    <string name="tixian">提现</string>
    <string name="zhuyi">注意</string>
    <string name="tixian1">1、请输入itiger交易所的账号UID，注意UID不是手机号或邮箱，\n请查看下方截图获取UID，绑定后可进行一笔小额提现进行测试</string>
    <string name="tixian2">2、最小提币数量：100 算力</string>
    <string name="tixian3">3、提现手续费：2 算力</string>
    <string name="tixian4">4、充值密码后24小时内禁止提现</string>
    <string name="uid_huoqu">UID获取攻略：</string>
    <string name="uid_huoqu1">1、网页中打开www.itiger.io交易所，登录后，右上角进 入“用户中心”，在左上方即可找到UID</string>
    <string name="uid_huoqu2">2、APP中登录后，点击首页左上方，找到UID</string>
    <string name="yaoqing_haoyou">邀请好友</string>
    <string name="yaoqing_quanqiu_wei_ye">邀您共创全球化挖矿伟业</string>
    <string name="save_pic">保存图片</string>
    <string name="copy_lianjie">复制链接</string>
    <string name="share_weixin">分享至微信</string>
    <string name="wode">我的</string>
    <string name="nicheng">昵称</string>
    <string name="phone">手机号</string>
    <string name="banben_hao">版本号</string>
    <string name="exit_login">退出登录</string>
    <string name="wode_kuangji">我的矿机</string>
    <string name="xinghao">型号</string>
    <string name="suanli">算力</string>
    <string name="xiaonengbi">效能比</string>
    <string name="kuangchang">矿场</string>
    <string name="zhuce_zhanghao">注册账号</string>
    <string name="phone_num">手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="verify_code">验证码</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="set_password">设置密码</string>
    <string name="input_password">请输入密码</string>
    <string name="yaoqingma">邀请码</string>
    <string name="input_yaoqingma">请输入邀请码</string>
    <string name="modify_name">修改昵称</string>
    <string name="finish">完成</string>
    <string name="kuangzhuchi">矿主池</string>
    <string name="daojishi">发放倒计时</string>
    <string name="kuangzhu_bang">矿主榜</string>
    <string name="gongyou_kuangzhu">当前共%s位矿主</string>
    <string name="yaoqing_kuangyou">邀请矿友</string>
    <string name="wode_kuangyou">我的矿友</string>
    <string name="guize">规则</string>
    <string name="kuangyouquan">矿友圈</string>
    <string name="chakan_xiangqing">查看详情</string>
    <string name="zhanghaomimacuowu">账号或密码错误\n请重新再试或找回密码</string>
    <string name="cuowu4ci">错误达到4次\n还有1次试错机会</string>
    <string name="jinzhidenglu1xiaoshi">该账号密码错误达到5次\n1小时内禁止登录</string>
    <string name="wallet">钱包</string>
    <string name="kuangchi_shouyi">挖矿收益</string>
    <string name="wode_suanli">我的算力</string>
    <string name="leijichanchu">累计产出</string>
    <string name="gonglv">功率</string>
    <string name="tixian_jilu">提现记录</string>
    <string name="gonggao_zhongxin">公告中心</string>
    <string name="save_success">保存成功</string>
    <string name="yiwancheng">已完成</string>
    <string name="shenhezhong">审核中</string>
    <string name="shibai">失败</string>
    <string name="usdt">充值USDT</string>
    <string name="chongzhi_jilu">充值记录</string>
    <string name="erc20_usdt">请充值ERC20 版本 USDT</string>
    <string name="copy">复制</string>
    <string name="Note">注意:</string>
    <string name="_1_100_usdt">1、最小充值金额：100 USDT</string>
    <string name="_2_usdt_erc20_usdt_usdt_usdt">2、禁止向USDT地址充值除Erc20 USDT之外的资产，任何充入USDT地址的非USDT资产将不可找回</string>
    <string name="fuzhi_chenggong">复制成功</string>
    <string name="buy_meachine">购买矿机</string>
    <string name="jiaoyi_shijian">交易时间</string>
    <string name="jiaoyi_haxi">交易哈希</string>
    <string name="tixian_chenggong">提现成功</string>
    <string name="huodong_guize">矿友活动规则</string>
    <string name="wakuang_shouyi_jilu">挖矿收益记录</string>
</resources>
