<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.InviteFriendActivity">
    <include layout="@layout/common_status_bar"></include>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        >
        <FrameLayout
            android:id="@+id/exit"
            android:layout_marginLeft="10dp"
            android:layout_width="40dp"
            android:layout_height="match_parent">
            <ImageView

                android:layout_width="18dp"
                android:layout_height="15dp"
                app:srcCompat="@mipmap/exit"
                android:layout_gravity="center"
                ></ImageView>
        </FrameLayout>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usdt"
            android:layout_centerInParent="true"
            style="@style/title_style"
            ></TextView>
        <TextView
            android:id="@+id/tv_record"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chongzhi_jilu"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            style="@style/light_common_12dp"
            android:textSize="14dp"
            ></TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_white_radius_10"
        android:paddingBottom="40dp"
        >
        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:text="@string/erc20_usdt"
            style="@style/common_12dp"
            ></TextView>
        <ImageView
            android:layout_marginTop="23dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/iv_qrcode"
            android:layout_width="155dp"
            android:layout_height="155dp"
            ></ImageView>
        <TextView
            android:id="@+id/tv_save_pic"
            android:layout_marginTop="23dp"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:text="@string/save_pic"
            style="@style/button"
            ></TextView>
        <LinearLayout
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:background="@color/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_info"
                style="@style/common_12dp"
                android:text="0x1234567890123456789012345678901243qwertyuio"
                ></TextView>
            <TextView
                android:id="@+id/tv_copy"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/copy"
                android:drawablePadding="5dp"
                android:drawableLeft="@mipmap/copy_green"
                android:textColor="@color/green"
                android:layout_marginBottom="10dp"
                ></TextView>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Note"
        style="@style/light_common_12dp"
        ></TextView>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_100_usdt"
        style="@style/light_common_12dp"
        ></TextView>
    <TextView
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_usdt_erc20_usdt_usdt_usdt"
        style="@style/light_common_12dp"
        ></TextView>
</LinearLayout>