<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.RegisterActivity">

    <include layout="@layout/common_status_bar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        >
        <FrameLayout
            android:id="@+id/fl_close"
            android:layout_marginLeft="10dp"
            android:layout_width="40dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="15dp"
                app:srcCompat="@mipmap/exit"
                android:layout_gravity="center"
                ></ImageView>
        </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:layout_centerInParent="true"
                style="@style/title_style"
                ></TextView>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_title"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/commonTextColor"
        android:text="@string/zhuce_zhanghao"
        ></TextView>
    <TextView
        android:layout_marginTop="44dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_num"
        android:textSize="16sp"
        android:textColor="@color/commonTextColor"
        ></TextView>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/tv_pre_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="+86"
            android:textColor="@color/commonTextColor"
            android:textSize="14sp"></TextView>
        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_width="6dp"
            android:layout_height="8dp"
            app:srcCompat="@mipmap/arrow"
            android:gravity="center"
            ></ImageView>
        <EditText
            android:id="@+id/et_phone"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/commonTextColor"
            android:hint="@string/input_phone"
            android:background="@drawable/shape_white"
            ></EditText>
    </LinearLayout>
    <View
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        ></View>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_code"
        android:textSize="16sp"
        android:textColor="@color/commonTextColor"
        ></TextView>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <EditText
            android:id="@+id/et_verify_code"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/commonTextColor"
            android:hint="@string/input_verify_code"
            android:background="@drawable/shape_white"
            ></EditText>
        <TextView
            android:id="@+id/tv_get_verify_code"
            android:layout_marginRight="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#3EB271"
            android:text="@string/getVerifyCode"
            ></TextView>
    </LinearLayout>
    <View
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        ></View>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        android:textSize="16sp"
        android:textColor="@color/commonTextColor"
        ></TextView>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/commonTextColor"
            android:hint="@string/input_password"
            android:background="@drawable/shape_white"
            ></EditText>

    </LinearLayout>
    <View
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        ></View>
    <TextView
        android:id="@+id/tv_yaoqingma"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yaoqingma"
        android:textSize="16sp"
        android:textColor="@color/commonTextColor"
        ></TextView>
    <LinearLayout
        android:id="@+id/ll_yaoqingma"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <EditText
            android:id="@+id/et_invite_num"
            android:inputType="text"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/commonTextColor"
            android:hint="@string/input_yaoqingma"
            android:background="@drawable/shape_white"
            ></EditText>

    </LinearLayout>
    <View
        android:id="@+id/view_divider"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        ></View>

    <TextView
        android:id="@+id/tv_register"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_trans_light_green_raduis_4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="16dp"
        android:textColor="#77ffffff"
        ></TextView>
</LinearLayout>